added image to a topic
